# docs/swagger.yaml
@@ -1,4 +1,146 @@
+definitions:
+  handler.ResponseBody:
+    properties:
+      code:
+        description: http code
+        type: integer
+      data:
+        description: response data
+      msg:
+        description: response message
+        type: string
+      reason:
+        description: reason key
+        type: string
+    type: object
+  schema.RegisterUserByEmailReq:
+    properties:
+      captcha_code:
+        type: string
+      captcha_id:
+        type: string
+      e_mail:
+        maxLength: 500
+        type: string
+      name:
+        maxLength: 30
+        minLength: 2
+        type: string
+      pass:
+        maxLength: 32
+        minLength: 8
+        type: string
+    required:
+    - e_mail
+    - name
+    - pass
+    type: object
+  schema.RegisterUserByEmailRes:
+    properties:
+      access_token:
+        type: string
+      avatar:
+        description: 头像
+        type: string
+      createdAt:
+        type: integer
+      deletedAt:
+        type: integer
+      displayName:
+        description: 昵称
+        type: string
+      email:
+        description: 邮箱
+        type: string
+      id:
+        type: integer
+      ip:
+        description: IP 地址
+        type: string
+      lastLoginDate:
+        description: 上次登录时间
+        type: integer
+      mailStatus:
+        description: 邮箱状态
+        type: string
+      password:
+        description: 密码
+        type: string
+      role_id:
+        type: integer
+      status:
+        description: 用户状态
+        type: string
+      suspendedAt:
+        description: 被禁言的时间
+        type: integer
+      updatedAt:
+        type: integer
+      username:
+        description: 用户名
+        type: string
+      visit_token:
+        type: string
+    type: object
+  schema.VerificationEmailReq:
+    type: object
+  schema.VerificationEmailRes:
+    type: object
 info:
   contact: {}
-paths: {}
+paths:
+  /askme/api/v1/user/email/verification:
+    post:
+      consumes:
+      - application/json
+      description: 邮箱验证
+      parameters:
+      - description: body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/schema.VerificationEmailReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.ResponseBody'
+            - properties:
+                data:
+                  $ref: '#/definitions/schema.VerificationEmailRes'
+              type: object
+      summary: 邮箱验证
+      tags:
+      - User
+  /askme/api/v1/user/register/email:
+    post:
+      consumes:
+      - application/json
+      description: 通过邮箱注册账号
+      parameters:
+      - description: body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/schema.RegisterUserByEmailReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.ResponseBody'
+            - properties:
+                data:
+                  $ref: '#/definitions/schema.RegisterUserByEmailRes'
+              type: object
+      summary: 通过邮箱注册账号
+      tags:
+      - User
 swagger: "2.0"
